--- a/task3_cnn.ipynb
+++ b/task3_cnn.ipynb
@@ -53,9 +53,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 2,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-10-31T20:50:13.986432Z",
+     "start_time": "2022-10-31T20:50:13.102307Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import tensorflow as tf\n",
@@ -66,18 +80,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 3,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-10-31T20:50:28.986711Z",
+     "start_time": "2022-10-31T20:50:28.936386Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.3.1\n"
+     ]
+    }
+   ],
    "source": [
     "print(tf.__version__)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 4,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-10-31T20:50:31.362964Z",
+     "start_time": "2022-10-31T20:50:31.045002Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "''"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "tf.test.gpu_device_name()"
    ]
@@ -102,9 +145,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 18,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-10-31T21:44:53.268289Z",
+     "start_time": "2022-10-31T21:44:53.208842Z"
+    },
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Your feedforward result (size :(2, 3, 3, 4)) is: \n",
+      "[[[[-0.49018405 -0.35006199 -0.20993993 -0.06981787]\n",
+      "   [-0.38629836 -0.25815678 -0.1300152  -0.00187362]\n",
+      "   [-0.17199324 -0.03014875  0.11169575  0.25354024]]\n",
+      "\n",
+      "  [[ 0.07961979  0.21551232  0.35140485  0.48729737]\n",
+      "   [ 0.47663201  0.5990752   0.7215184   0.8439616 ]\n",
+      "   [ 0.40188702  0.5403632   0.67883938  0.81731556]]\n",
+      "\n",
+      "  [[ 0.17364167  0.32582076  0.47799985  0.63017894]\n",
+      "   [ 0.45442123  0.60064836  0.74687549  0.89310261]\n",
+      "   [ 0.28514051  0.43904203  0.59294355  0.74684508]]]\n",
+      "\n",
+      "\n",
+      " [[[-0.29100188 -0.13399998  0.02300192  0.18000383]\n",
+      "   [-0.23944372 -0.08598237  0.06747897  0.22094032]\n",
+      "   [-0.17536921 -0.01664487  0.14207947  0.3008038 ]]\n",
+      "\n",
+      "  [[-0.07736276  0.08384953  0.24506183  0.40627412]\n",
+      "   [ 0.01328028  0.17370312  0.33412597  0.49454882]\n",
+      "   [-0.05893273  0.10486322  0.26865916  0.43245511]]\n",
+      "\n",
+      "  [[-0.23485056 -0.06579163  0.10326731  0.27232624]\n",
+      "   [-0.31023572 -0.13868882  0.03285807  0.20440496]\n",
+      "   [-0.32590986 -0.15512849  0.01565288  0.18643424]]]]\n"
+     ]
+    }
+   ],
    "source": [
     "# tf 2.4.0 implementation\n",
     "from utils.layer_funcs import conv2d_forward\n",
@@ -132,9 +213,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 19,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-10-31T21:44:55.305281Z",
+     "start_time": "2022-10-31T21:44:55.245800Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Is your feedforward correct? True\n"
+     ]
+    }
+   ],
    "source": [
     "######################################################\n",
     "# Verification/checking code. Do not modify it       #\n",
@@ -166,9 +260,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 20,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-10-31T21:44:59.979869Z",
+     "start_time": "2022-10-31T21:44:59.879938Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Your weights' gradients result (size :(3, 3, 3, 4)) is: \n",
+      "[[[[-0.9448206  -1.0686526  -0.3135852  -0.03957435]\n",
+      "   [-0.93686473 -1.0602988  -0.30789375 -0.04026189]\n",
+      "   [-0.9289089  -1.0519449  -0.3022023  -0.04094943]]\n",
+      "\n",
+      "  [[-1.3040056  -0.8374328  -0.21998174  0.6414077 ]\n",
+      "   [-1.2951415  -0.8254823  -0.21534838  0.63206196]\n",
+      "   [-1.2862774  -0.8135318  -0.21071501  0.62271625]]\n",
+      "\n",
+      "  [[-1.2994598  -0.3068896  -0.25185415  1.1314708 ]\n",
+      "   [-1.287848   -0.3005608  -0.25122565  1.1195849 ]\n",
+      "   [-1.2762363  -0.294232   -0.25059715  1.107699  ]]]\n",
+      "\n",
+      "\n",
+      " [[[-0.99625653 -0.9673741   0.9784877   0.02301925]\n",
+      "   [-0.987849   -0.96097547  0.98191816  0.02328004]\n",
+      "   [-0.97944146 -0.95457685  0.98534864  0.02354082]]\n",
+      "\n",
+      "  [[-0.79276395 -1.3021034   1.0766063   1.2217364 ]\n",
+      "   [-0.7856655  -1.2886565   1.0777571   1.2108353 ]\n",
+      "   [-0.778567   -1.2752095   1.0789078   1.1999341 ]]\n",
+      "\n",
+      "  [[-0.10447567 -1.2830693   1.0130789   1.6749119 ]\n",
+      "   [-0.09791528 -1.2734449   1.006716    1.6608189 ]\n",
+      "   [-0.09135488 -1.2638205   1.0003531   1.646726  ]]]\n",
+      "\n",
+      "\n",
+      " [[[-1.1468793  -1.2304289   1.0914675  -0.3861888 ]\n",
+      "   [-1.1350057  -1.222894    1.0924698  -0.37766218]\n",
+      "   [-1.1231321  -1.2153591   1.093472   -0.3691356 ]]\n",
+      "\n",
+      "  [[-1.1311175  -1.6217463   1.2828496   0.45399398]\n",
+      "   [-1.1164029  -1.6074849   1.279071    0.45700017]\n",
+      "   [-1.1016883  -1.5932235   1.2752925   0.46000633]]\n",
+      "\n",
+      "  [[-0.32878494 -1.5424399   0.97003525  0.7883872 ]\n",
+      "   [-0.32069    -1.5330256   0.96160156  0.786144  ]\n",
+      "   [-0.3125951  -1.5236114   0.95316786  0.78390086]]]]\n",
+      "Your biases' gradients result is: \n",
+      "[ 3.46642345  6.56658685  0.5619718  -5.32340436]\n"
+     ]
+    }
+   ],
    "source": [
     "####################################################\n",
     "# Demo code. Don't change it.                      #\n",
@@ -187,9 +333,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 21,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-10-31T21:45:04.458532Z",
+     "start_time": "2022-10-31T21:45:04.027242Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Are your weights' gradients correct? True\n",
+      "Are your biases' gradients correct? True\n"
+     ]
+    }
+   ],
    "source": [
     "####################################################\n",
     "# Verification/checking code. Don't change it.     #\n",
@@ -222,9 +382,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 26,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-10-31T22:03:28.900414Z",
+     "start_time": "2022-10-31T22:03:28.798730Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[-0.5        -0.48976109 -0.47952218 -0.46928328 -0.45904437 -0.44880546\n",
+      "  -0.43856655]\n",
+      " [-0.42832765 -0.41808874 -0.40784983 -0.39761092 -0.38737201 -0.37713311\n",
+      "  -0.3668942 ]\n",
+      " [-0.35665529 -0.34641638 -0.33617747 -0.32593857 -0.31569966 -0.30546075\n",
+      "  -0.29522184]\n",
+      " [-0.28498294 -0.27474403 -0.26450512 -0.25426621 -0.2440273  -0.2337884\n",
+      "  -0.22354949]\n",
+      " [-0.21331058 -0.20307167 -0.19283276 -0.18259386 -0.17235495 -0.16211604\n",
+      "  -0.15187713]\n",
+      " [-0.14163823 -0.13139932 -0.12116041 -0.1109215  -0.10068259 -0.09044369\n",
+      "  -0.08020478]\n",
+      " [-0.06996587 -0.05972696 -0.04948805 -0.03924915 -0.02901024 -0.01877133\n",
+      "  -0.00853242]]\n",
+      "[[-0.45904437 -0.42832765]\n",
+      " [-0.2440273  -0.21331058]]\n",
+      "Your feedforward result size :(2, 2, 2, 3)\n"
+     ]
+    }
+   ],
    "source": [
     "from utils.layer_funcs import avg_pool_forward\n",
     "\n",
@@ -244,9 +433,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 27,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-10-31T22:03:34.938202Z",
+     "start_time": "2022-10-31T22:03:34.818162Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tf.Tensor(\n",
+      "[[-0.45904437 -0.42832765]\n",
+      " [-0.2440273  -0.21331058]], shape=(2, 2), dtype=float64)\n",
+      "Is your feedforward correct? True\n"
+     ]
+    }
+   ],
    "source": [
     "####################################################\n",
     "# Verification/checking code. Don't change it.     #\n",
@@ -275,9 +480,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 30,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-10-31T22:45:29.512155Z",
+     "start_time": "2022-10-31T22:45:29.420372Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Your inputs' gradients result (size :(2, 7, 7, 3)) is: \n",
+      "[[-0.27140765 -0.27140765  0.         -0.37657368 -0.37657368  0.\n",
+      "   0.        ]\n",
+      " [-0.27140765 -0.27140765  0.         -0.37657368 -0.37657368  0.\n",
+      "   0.        ]\n",
+      " [ 0.          0.          0.          0.          0.          0.\n",
+      "   0.        ]\n",
+      " [-0.60666981 -0.60666981  0.         -0.2166851  -0.2166851   0.\n",
+      "   0.        ]\n",
+      " [-0.60666981 -0.60666981  0.         -0.2166851  -0.2166851   0.\n",
+      "   0.        ]\n",
+      " [ 0.          0.          0.          0.          0.          0.\n",
+      "   0.        ]\n",
+      " [ 0.          0.          0.          0.          0.          0.\n",
+      "   0.        ]]\n"
+     ]
+    }
+   ],
    "source": [
     "from utils.layer_funcs import avg_pool_backward\n",
     "\n",
@@ -292,9 +524,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 31,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-10-31T22:45:31.999304Z",
+     "start_time": "2022-10-31T22:45:31.839799Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "**************************************************\n",
+      "tf.Tensor(\n",
+      "[[-0.27140765 -0.27140765  0.         -0.37657368 -0.37657368  0.\n",
+      "   0.        ]\n",
+      " [-0.27140765 -0.27140765  0.         -0.37657368 -0.37657368  0.\n",
+      "   0.        ]\n",
+      " [ 0.          0.          0.          0.          0.          0.\n",
+      "   0.        ]\n",
+      " [-0.60666981 -0.60666981  0.         -0.2166851  -0.2166851   0.\n",
+      "   0.        ]\n",
+      " [-0.60666981 -0.60666981  0.         -0.2166851  -0.2166851   0.\n",
+      "   0.        ]\n",
+      " [ 0.          0.          0.          0.          0.          0.\n",
+      "   0.        ]\n",
+      " [ 0.          0.          0.          0.          0.          0.\n",
+      "   0.        ]], shape=(7, 7), dtype=float64)\n",
+      "Is your inputs' gradients correct? True\n"
+     ]
+    }
+   ],
    "source": [
     "#######################################\n",
     "# Checking code. Don't change it.     #\n",
@@ -391,8 +652,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 32,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-10-31T22:49:25.720901Z",
+     "start_time": "2022-10-31T22:49:25.496808Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import datetime\n",
@@ -407,8 +673,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 33,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-10-31T22:49:31.390484Z",
+     "start_time": "2022-10-31T22:49:28.830191Z"
+    }
+   },
    "outputs": [],
    "source": [
     "#Load data from the Fashion MNIST dataset\n",
@@ -423,6 +694,31 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-10-31T23:03:04.888626Z",
+     "start_time": "2022-10-31T23:03:04.816552Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(10000, 28, 28, 1)"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x_test.shape"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -432,24 +728,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 77,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-11-01T20:03:56.494225Z",
+     "start_time": "2022-11-01T20:03:56.328905Z"
+    }
+   },
    "outputs": [],
    "source": [
     "def create_model():\n",
     "    model = tf.keras.models.Sequential()\n",
-    "    \n",
     "    #TODO: Add layers below\n",
-    "\n",
     "    \n",
+    "    conv_layer_1 = Conv2D(filters=6, kernel_size=(6, 6), strides=(1,1), activation='relu', input_shape=(28,28,1), padding=\"same\")\n",
+    "    conv_layer_2 = Conv2D(filters=6, kernel_size=(3, 3), strides=(1,1), activation='relu', padding=\"same\")\n",
+    "    conv_layer_3 = Conv2D(filters=6, kernel_size=(3, 3), strides=(1,1), activation='relu', padding=\"same\")\n",
+    "    maxpool_layer_1 = MaxPooling2D(pool_size=(2, 2), strides=(2,2),padding='valid',)\n",
+    "    #avgpool_layer_1 = AveragePooling2D(pool_size=(2, 2), strides=(2, 2), padding='valid')\n",
+    "    flatten_layer = Flatten()\n",
+    "    fc_layer_1 = Dense(100, activation='relu')\n",
+    "    fc_layer_2 = Dense(10, activation='softmax')\n",
+    "    model.add(conv_layer_1)\n",
+    "    model.add(conv_layer_2)\n",
+    "    model.add(conv_layer_3)\n",
+    "    model.add(maxpool_layer_1)\n",
+    "    model.add(flatten_layer)\n",
+    "    model.add(fc_layer_1)\n",
+    "    model.add(fc_layer_2)\n",
     "    return model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 78,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-11-01T20:11:16.317289Z",
+     "start_time": "2022-11-01T20:03:58.331712Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/10\n",
+      "235/235 [==============================] - 49s 208ms/step - loss: 0.6650 - accuracy: 0.7700 - val_loss: 0.4503 - val_accuracy: 0.8402\n",
+      "Epoch 2/10\n",
+      "235/235 [==============================] - 47s 201ms/step - loss: 0.3915 - accuracy: 0.8621 - val_loss: 0.3982 - val_accuracy: 0.8532\n",
+      "Epoch 3/10\n",
+      "235/235 [==============================] - 45s 189ms/step - loss: 0.3400 - accuracy: 0.8790 - val_loss: 0.3488 - val_accuracy: 0.8749\n",
+      "Epoch 4/10\n",
+      "235/235 [==============================] - 40s 169ms/step - loss: 0.3084 - accuracy: 0.8894 - val_loss: 0.3185 - val_accuracy: 0.8853\n",
+      "Epoch 5/10\n",
+      "235/235 [==============================] - 43s 184ms/step - loss: 0.2824 - accuracy: 0.8986 - val_loss: 0.3120 - val_accuracy: 0.8880\n",
+      "Epoch 6/10\n",
+      "235/235 [==============================] - 42s 180ms/step - loss: 0.2644 - accuracy: 0.9032 - val_loss: 0.3009 - val_accuracy: 0.8894\n",
+      "Epoch 7/10\n",
+      "235/235 [==============================] - 47s 198ms/step - loss: 0.2491 - accuracy: 0.9099 - val_loss: 0.2875 - val_accuracy: 0.8974\n",
+      "Epoch 8/10\n",
+      "235/235 [==============================] - 41s 173ms/step - loss: 0.2359 - accuracy: 0.9133 - val_loss: 0.2846 - val_accuracy: 0.8990\n",
+      "Epoch 9/10\n",
+      "235/235 [==============================] - 40s 171ms/step - loss: 0.2291 - accuracy: 0.9168 - val_loss: 0.2832 - val_accuracy: 0.8947\n",
+      "Epoch 10/10\n",
+      "235/235 [==============================] - 42s 181ms/step - loss: 0.2119 - accuracy: 0.9227 - val_loss: 0.2682 - val_accuracy: 0.9039\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<tensorflow.python.keras.callbacks.History at 0x7fc0c4865520>"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#Create the model, compile the model, and fit it\n",
     "model_test = create_model()\n",
@@ -529,7 +885,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.12 64-bit",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -543,7 +899,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.8.8"
   },
   "vscode": {
    "interpreter": {
