--- a/task3_cnn.ipynb
+++ b/task3_cnn.ipynb
@@ -53,23 +53,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-10-31T20:50:13.986432Z",
      "start_time": "2022-10-31T20:50:13.102307Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import tensorflow as tf\n",
@@ -80,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-10-31T20:50:28.986711Z",
@@ -92,7 +83,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.3.1\n"
+      "2.4.0\n"
      ]
     }
    ],
@@ -102,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-10-31T20:50:31.362964Z",
@@ -113,10 +104,10 @@
     {
      "data": {
       "text/plain": [
-       "''"
+       "'/device:GPU:0'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -145,13 +136,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-10-31T21:44:53.268289Z",
      "start_time": "2022-10-31T21:44:53.208842Z"
     },
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -213,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-10-31T21:44:55.305281Z",
@@ -260,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-10-31T21:44:59.979869Z",
@@ -333,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-10-31T21:45:04.458532Z",
@@ -382,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-10-31T22:03:28.900414Z",
@@ -433,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-10-31T22:03:34.938202Z",
@@ -480,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-10-31T22:45:29.512155Z",
@@ -524,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-10-31T22:45:31.999304Z",
@@ -652,7 +643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-10-31T22:49:25.720901Z",
@@ -673,7 +664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-10-31T22:49:31.390484Z",
@@ -695,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-10-31T23:03:04.888626Z",
@@ -709,7 +700,7 @@
        "(10000, 28, 28, 1)"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -728,7 +719,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-11-01T20:03:56.494225Z",
@@ -761,7 +752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-11-01T20:11:16.317289Z",
@@ -774,34 +765,34 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/10\n",
-      "235/235 [==============================] - 49s 208ms/step - loss: 0.6650 - accuracy: 0.7700 - val_loss: 0.4503 - val_accuracy: 0.8402\n",
+      "235/235 [==============================] - 3s 9ms/step - loss: 0.9008 - accuracy: 0.7029 - val_loss: 0.4388 - val_accuracy: 0.8411\n",
       "Epoch 2/10\n",
-      "235/235 [==============================] - 47s 201ms/step - loss: 0.3915 - accuracy: 0.8621 - val_loss: 0.3982 - val_accuracy: 0.8532\n",
+      "235/235 [==============================] - 1s 5ms/step - loss: 0.3706 - accuracy: 0.8690 - val_loss: 0.3636 - val_accuracy: 0.8723\n",
       "Epoch 3/10\n",
-      "235/235 [==============================] - 45s 189ms/step - loss: 0.3400 - accuracy: 0.8790 - val_loss: 0.3488 - val_accuracy: 0.8749\n",
+      "235/235 [==============================] - 1s 5ms/step - loss: 0.3188 - accuracy: 0.8866 - val_loss: 0.3395 - val_accuracy: 0.8817\n",
       "Epoch 4/10\n",
-      "235/235 [==============================] - 40s 169ms/step - loss: 0.3084 - accuracy: 0.8894 - val_loss: 0.3185 - val_accuracy: 0.8853\n",
+      "235/235 [==============================] - 1s 5ms/step - loss: 0.2931 - accuracy: 0.8942 - val_loss: 0.3146 - val_accuracy: 0.8877\n",
       "Epoch 5/10\n",
-      "235/235 [==============================] - 43s 184ms/step - loss: 0.2824 - accuracy: 0.8986 - val_loss: 0.3120 - val_accuracy: 0.8880\n",
+      "235/235 [==============================] - 1s 5ms/step - loss: 0.2693 - accuracy: 0.9036 - val_loss: 0.2981 - val_accuracy: 0.8952\n",
       "Epoch 6/10\n",
-      "235/235 [==============================] - 42s 180ms/step - loss: 0.2644 - accuracy: 0.9032 - val_loss: 0.3009 - val_accuracy: 0.8894\n",
+      "235/235 [==============================] - 1s 5ms/step - loss: 0.2577 - accuracy: 0.9076 - val_loss: 0.3095 - val_accuracy: 0.8899\n",
       "Epoch 7/10\n",
-      "235/235 [==============================] - 47s 198ms/step - loss: 0.2491 - accuracy: 0.9099 - val_loss: 0.2875 - val_accuracy: 0.8974\n",
+      "235/235 [==============================] - 1s 5ms/step - loss: 0.2452 - accuracy: 0.9097 - val_loss: 0.2931 - val_accuracy: 0.8974\n",
       "Epoch 8/10\n",
-      "235/235 [==============================] - 41s 173ms/step - loss: 0.2359 - accuracy: 0.9133 - val_loss: 0.2846 - val_accuracy: 0.8990\n",
+      "235/235 [==============================] - 1s 5ms/step - loss: 0.2212 - accuracy: 0.9183 - val_loss: 0.2862 - val_accuracy: 0.8963\n",
       "Epoch 9/10\n",
-      "235/235 [==============================] - 40s 171ms/step - loss: 0.2291 - accuracy: 0.9168 - val_loss: 0.2832 - val_accuracy: 0.8947\n",
+      "235/235 [==============================] - 1s 5ms/step - loss: 0.2198 - accuracy: 0.9202 - val_loss: 0.2844 - val_accuracy: 0.8999\n",
       "Epoch 10/10\n",
-      "235/235 [==============================] - 42s 181ms/step - loss: 0.2119 - accuracy: 0.9227 - val_loss: 0.2682 - val_accuracy: 0.9039\n"
+      "235/235 [==============================] - 1s 5ms/step - loss: 0.2098 - accuracy: 0.9241 - val_loss: 0.2735 - val_accuracy: 0.9030\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<tensorflow.python.keras.callbacks.History at 0x7fc0c4865520>"
+       "<tensorflow.python.keras.callbacks.History at 0x7f9dad6d2940>"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -832,9 +823,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Assets written to: ./model/task3_model/assets\n"
+     ]
+    }
+   ],
    "source": [
     "model_test.save(filepath = \"./model/task3_model\")"
    ]
@@ -848,9 +847,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential\"\n",
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "conv2d (Conv2D)              (None, 28, 28, 6)         222       \n",
+      "_________________________________________________________________\n",
+      "conv2d_1 (Conv2D)            (None, 28, 28, 6)         330       \n",
+      "_________________________________________________________________\n",
+      "conv2d_2 (Conv2D)            (None, 28, 28, 6)         330       \n",
+      "_________________________________________________________________\n",
+      "max_pooling2d (MaxPooling2D) (None, 14, 14, 6)         0         \n",
+      "_________________________________________________________________\n",
+      "flatten (Flatten)            (None, 1176)              0         \n",
+      "_________________________________________________________________\n",
+      "dense (Dense)                (None, 100)               117700    \n",
+      "_________________________________________________________________\n",
+      "dense_1 (Dense)              (None, 10)                1010      \n",
+      "=================================================================\n",
+      "Total params: 119,592\n",
+      "Trainable params: 119,592\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n",
+      "None\n"
+     ]
+    }
+   ],
    "source": [
     "loaded_model = tf.keras.models.load_model(\"./model/task3_model\")\n",
     "print(loaded_model.summary())"
@@ -866,9 +895,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "      <iframe id=\"tensorboard-frame-dcd89d8d85f4923\" width=\"100%\" height=\"800\" frameborder=\"0\">\n",
+       "      </iframe>\n",
+       "      <script>\n",
+       "        (function() {\n",
+       "          const frame = document.getElementById(\"tensorboard-frame-dcd89d8d85f4923\");\n",
+       "          const url = new URL(\"/\", window.location);\n",
+       "          const port = 6006;\n",
+       "          if (port) {\n",
+       "            url.port = port;\n",
+       "          }\n",
+       "          frame.src = url;\n",
+       "        })();\n",
+       "      </script>\n",
+       "    "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# Load the TensorBoard notebook extension\n",
     "%load_ext tensorboard\n",
@@ -899,7 +955,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.6.9"
   },
   "vscode": {
    "interpreter": {
