--- a/task5-kaggle.ipynb
+++ b/task5-kaggle.ipynb
@@ -105,31 +105,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2022-11-02T18:32:08.237711Z",
-     "start_time": "2022-11-02T18:32:07.949558Z"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'/Users/gaoyihao/Desktop/4040/e4040-2022fall-assign2-yg2820'"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "pwd"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
@@ -140,14 +115,18 @@
    },
    "outputs": [
     {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: './data/kaggle_train_128/train_128'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1-2194f67601cc>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0mimage_list\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0mlabel_list\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 12\u001b[0;31m \u001b[0;32mfor\u001b[0m \u001b[0msub_dir\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlistdir\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrain_directory\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     13\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Reading folder {}\"\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msub_dir\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m     \u001b[0msub_dir_name\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrain_directory\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0msub_dir\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: './data/kaggle_train_128/train_128'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Reading folder 1\n",
+      "Reading folder 3\n",
+      "Reading folder 0\n",
+      "Reading folder 2\n",
+      "Reading folder 4\n",
+      "Reading Test Images\n",
+      "Training data shape:  (15000, 128, 128, 3)\n",
+      "Training labels shape:  (15000,)\n",
+      "Test data shape:  (3500, 128, 128, 3)\n"
      ]
     }
    ],
@@ -175,7 +154,7 @@
     "y_train=np.array(label_list)\n",
     "\n",
     "#Load Test images\n",
-    "test_directory = \"./kaggle_test_128/test_128\"#TODO: Enter path for test128 folder (hint: use os.getcwd())\n",
+    "test_directory = \"./data/kaggle_test_128/test_128\"#TODO: Enter path for test128 folder (hint: use os.getcwd())\n",
     "test_image_list=[]\n",
     "test_df = pd.DataFrame([], columns=['Id', 'X'])\n",
     "print(\"Reading Test Images\")\n",
@@ -207,6 +186,110 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import datetime\n",
+    "import tensorflow as tf\n",
+    "from tensorflow.keras.models import Sequential\n",
+    "from tensorflow.keras.layers import Dense, Flatten, Conv2D, AveragePooling2D, MaxPooling2D\n",
+    "from tensorflow.keras import Model\n",
+    "from tensorflow.keras.utils import to_categorical\n",
+    "from tensorflow.keras.losses import categorical_crossentropy\n",
+    "from tensorflow.keras.preprocessing.image import ImageDataGenerator"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "X_train, X_val, y_train, y_val = train_test_split(X_train.astype('float32'), y_train.astype('float32'), test_size=0.2, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_model():\n",
+    "    model = tf.keras.models.Sequential()\n",
+    "    \n",
+    "    model.add(tf.keras.layers.Conv2D(128, (3, 3), activation='relu',padding = \"SAME\"))\n",
+    "    model.add(tf.keras.layers.MaxPooling2D((2, 2)))\n",
+    "    model.add(tf.keras.layers.Conv2D(64, (3, 3), activation='relu',padding = \"SAME\"))\n",
+    "    model.add(tf.keras.layers.MaxPooling2D((2, 2)))\n",
+    "    model.add(tf.keras.layers.Conv2D(64, (3, 3), activation='relu',padding = \"SAME\"))\n",
+    "    model.add(tf.keras.layers.MaxPooling2D((2, 2)))\n",
+    "    model.add(tf.keras.layers.Flatten())\n",
+    "    model.add(tf.keras.layers.Dropout(0.8))\n",
+    "    model.add(tf.keras.layers.Dense(100, activation='relu'))\n",
+    "    model.add(tf.keras.layers.Dense(5, activation='softmax'))\n",
+    "    \n",
+    "    return model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/10\n",
+      "75/75 [==============================] - 14s 149ms/step - loss: 10.2876 - accuracy: 0.2035 - val_loss: 1.6095 - val_accuracy: 0.1908\n",
+      "Epoch 2/10\n",
+      "75/75 [==============================] - 10s 131ms/step - loss: 1.6096 - accuracy: 0.1994 - val_loss: 1.6096 - val_accuracy: 0.1975\n",
+      "Epoch 3/10\n",
+      "75/75 [==============================] - 10s 132ms/step - loss: 1.5884 - accuracy: 0.2369 - val_loss: 1.2042 - val_accuracy: 0.4642\n",
+      "Epoch 4/10\n",
+      "75/75 [==============================] - 10s 132ms/step - loss: 1.2230 - accuracy: 0.4860 - val_loss: 1.0208 - val_accuracy: 0.6154\n",
+      "Epoch 5/10\n",
+      "75/75 [==============================] - 10s 132ms/step - loss: 1.0689 - accuracy: 0.5666 - val_loss: 0.9274 - val_accuracy: 0.6571\n",
+      "Epoch 6/10\n",
+      "75/75 [==============================] - 10s 132ms/step - loss: 0.9697 - accuracy: 0.6208 - val_loss: 0.7990 - val_accuracy: 0.7171\n",
+      "Epoch 7/10\n",
+      "75/75 [==============================] - 10s 132ms/step - loss: 0.9080 - accuracy: 0.6493 - val_loss: 0.7423 - val_accuracy: 0.7454\n",
+      "Epoch 8/10\n",
+      "75/75 [==============================] - 10s 132ms/step - loss: 0.8433 - accuracy: 0.6877 - val_loss: 0.7239 - val_accuracy: 0.7617\n",
+      "Epoch 9/10\n",
+      "75/75 [==============================] - 10s 132ms/step - loss: 0.7698 - accuracy: 0.7198 - val_loss: 0.5973 - val_accuracy: 0.7996\n",
+      "Epoch 10/10\n",
+      "75/75 [==============================] - 10s 132ms/step - loss: 0.6828 - accuracy: 0.7606 - val_loss: 0.5563 - val_accuracy: 0.8192\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<tensorflow.python.keras.callbacks.History at 0x7fc493d07a58>"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Create the model, compile the model, and fit it\n",
+    "model_test = create_model()\n",
+    "model_test.compile(optimizer='adam',\n",
+    "              loss='sparse_categorical_crossentropy',\n",
+    "              metrics=['accuracy'])\n",
+    "model_test.fit(x=X_train, \n",
+    "          y=y_train,\n",
+    "          batch_size=128,\n",
+    "          epochs=10, \n",
+    "          validation_data=(X_val, y_val))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -225,11 +308,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Assets written to: ./KaggleModel/assets\n"
+     ]
+    }
+   ],
    "source": [
-    "# YOUR CODE HERE"
+    "# YOUR CODE HERE\n",
+    "model_test.save(filepath = \"./KaggleModel\")"
    ]
   },
   {
@@ -245,27 +337,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# import csv\n",
-    "# with open('predicted.csv','w') as csvfile:\n",
-    "#     fieldnames = ['Id','label']\n",
-    "#     writer = csv.DictWriter(csvfile, fieldnames=fieldnames)\n",
-    "#     writer.writeheader()\n",
-    "#     for index,l in enumerate(predicted_values_generated_by_your_model):\n",
-    "#         filename = str(index) + '.png'\n",
-    "#         label = str(l)\n",
-    "#         writer.writerow({'Id': filename, 'label': label})"
+    "import csv\n",
+    "predicted_values = np.argmax(model_test.predict(X_test.astype('float32')),axis=1)\n",
+    "with open('predicted.csv','w') as csvfile:\n",
+    "    fieldnames = ['Id','label']\n",
+    "    writer = csv.DictWriter(csvfile, fieldnames=fieldnames)\n",
+    "    writer.writeheader()\n",
+    "    for index,l in enumerate(predicted_values):\n",
+    "        filename = str(index) + '.png'\n",
+    "        label = str(l)\n",
+    "        writer.writerow({'Id': filename, 'label': label})"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -284,7 +370,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.6.9"
   },
   "vscode": {
    "interpreter": {
