--- a/task3_cnn.ipynb
+++ b/task3_cnn.ipynb
@@ -895,18 +895,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The tensorboard extension is already loaded. To reload it, use:\n",
+      "  %reload_ext tensorboard\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Reusing TensorBoard on port 6006 (pid 3141), started 0:01:19 ago. (Use '!kill 3141' to kill it.)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
     {
      "data": {
       "text/html": [
        "\n",
-       "      <iframe id=\"tensorboard-frame-dcd89d8d85f4923\" width=\"100%\" height=\"800\" frameborder=\"0\">\n",
+       "      <iframe id=\"tensorboard-frame-b33c01b09eb092e1\" width=\"100%\" height=\"800\" frameborder=\"0\">\n",
        "      </iframe>\n",
        "      <script>\n",
        "        (function() {\n",
-       "          const frame = document.getElementById(\"tensorboard-frame-dcd89d8d85f4923\");\n",
+       "          const frame = document.getElementById(\"tensorboard-frame-b33c01b09eb092e1\");\n",
        "          const url = new URL(\"/\", window.location);\n",
        "          const port = 6006;\n",
        "          if (port) {\n",
@@ -932,11 +951,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "![image.png](./utils/notebook_images/screenshot_tensorboard_board.png)"
+   ]
   }
  ],
  "metadata": {
