--- a/task5-kaggle.ipynb
+++ b/task5-kaggle.ipynb
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,42 +235,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/10\n",
-      "75/75 [==============================] - 14s 149ms/step - loss: 10.2876 - accuracy: 0.2035 - val_loss: 1.6095 - val_accuracy: 0.1908\n",
-      "Epoch 2/10\n",
-      "75/75 [==============================] - 10s 131ms/step - loss: 1.6096 - accuracy: 0.1994 - val_loss: 1.6096 - val_accuracy: 0.1975\n",
-      "Epoch 3/10\n",
-      "75/75 [==============================] - 10s 132ms/step - loss: 1.5884 - accuracy: 0.2369 - val_loss: 1.2042 - val_accuracy: 0.4642\n",
-      "Epoch 4/10\n",
-      "75/75 [==============================] - 10s 132ms/step - loss: 1.2230 - accuracy: 0.4860 - val_loss: 1.0208 - val_accuracy: 0.6154\n",
-      "Epoch 5/10\n",
-      "75/75 [==============================] - 10s 132ms/step - loss: 1.0689 - accuracy: 0.5666 - val_loss: 0.9274 - val_accuracy: 0.6571\n",
-      "Epoch 6/10\n",
-      "75/75 [==============================] - 10s 132ms/step - loss: 0.9697 - accuracy: 0.6208 - val_loss: 0.7990 - val_accuracy: 0.7171\n",
-      "Epoch 7/10\n",
-      "75/75 [==============================] - 10s 132ms/step - loss: 0.9080 - accuracy: 0.6493 - val_loss: 0.7423 - val_accuracy: 0.7454\n",
-      "Epoch 8/10\n",
-      "75/75 [==============================] - 10s 132ms/step - loss: 0.8433 - accuracy: 0.6877 - val_loss: 0.7239 - val_accuracy: 0.7617\n",
-      "Epoch 9/10\n",
-      "75/75 [==============================] - 10s 132ms/step - loss: 0.7698 - accuracy: 0.7198 - val_loss: 0.5973 - val_accuracy: 0.7996\n",
-      "Epoch 10/10\n",
-      "75/75 [==============================] - 10s 132ms/step - loss: 0.6828 - accuracy: 0.7606 - val_loss: 0.5563 - val_accuracy: 0.8192\n"
+      "Epoch 1/20\n",
+      "94/94 [==============================] - 27s 165ms/step - loss: 12.1967 - accuracy: 0.2055 - val_loss: 1.5082 - val_accuracy: 0.2873\n",
+      "Epoch 2/20\n",
+      "94/94 [==============================] - 12s 132ms/step - loss: 1.4996 - accuracy: 0.2965 - val_loss: 1.0879 - val_accuracy: 0.5747\n",
+      "Epoch 3/20\n",
+      "94/94 [==============================] - 12s 133ms/step - loss: 1.1371 - accuracy: 0.5573 - val_loss: 0.9458 - val_accuracy: 0.6407\n",
+      "Epoch 4/20\n",
+      "94/94 [==============================] - 13s 134ms/step - loss: 0.9223 - accuracy: 0.6504 - val_loss: 0.7171 - val_accuracy: 0.7450\n",
+      "Epoch 5/20\n",
+      "94/94 [==============================] - 13s 134ms/step - loss: 0.8257 - accuracy: 0.6945 - val_loss: 0.6648 - val_accuracy: 0.7593\n",
+      "Epoch 6/20\n",
+      "94/94 [==============================] - 13s 135ms/step - loss: 0.7475 - accuracy: 0.7184 - val_loss: 0.6402 - val_accuracy: 0.7773\n",
+      "Epoch 7/20\n",
+      "94/94 [==============================] - 13s 135ms/step - loss: 0.7070 - accuracy: 0.7479 - val_loss: 0.5288 - val_accuracy: 0.8197\n",
+      "Epoch 8/20\n",
+      "94/94 [==============================] - 13s 135ms/step - loss: 0.6054 - accuracy: 0.7851 - val_loss: 0.4631 - val_accuracy: 0.8390\n",
+      "Epoch 9/20\n",
+      "94/94 [==============================] - 13s 135ms/step - loss: 0.5869 - accuracy: 0.7905 - val_loss: 0.4352 - val_accuracy: 0.8567\n",
+      "Epoch 10/20\n",
+      "94/94 [==============================] - 13s 136ms/step - loss: 0.5398 - accuracy: 0.8084 - val_loss: 0.4078 - val_accuracy: 0.8670\n",
+      "Epoch 11/20\n",
+      "94/94 [==============================] - 13s 136ms/step - loss: 0.5052 - accuracy: 0.8154 - val_loss: 0.3859 - val_accuracy: 0.8753\n",
+      "Epoch 12/20\n",
+      "94/94 [==============================] - 13s 136ms/step - loss: 0.5060 - accuracy: 0.8201 - val_loss: 0.3938 - val_accuracy: 0.8683\n",
+      "Epoch 13/20\n",
+      "94/94 [==============================] - 13s 136ms/step - loss: 0.4684 - accuracy: 0.8347 - val_loss: 0.3685 - val_accuracy: 0.8783\n",
+      "Epoch 14/20\n",
+      "94/94 [==============================] - 13s 136ms/step - loss: 0.4462 - accuracy: 0.8389 - val_loss: 0.3754 - val_accuracy: 0.8757\n",
+      "Epoch 15/20\n",
+      "94/94 [==============================] - 13s 136ms/step - loss: 0.4308 - accuracy: 0.8445 - val_loss: 0.3594 - val_accuracy: 0.8807\n",
+      "Epoch 16/20\n",
+      "94/94 [==============================] - 13s 136ms/step - loss: 0.4517 - accuracy: 0.8428 - val_loss: 0.3337 - val_accuracy: 0.8900\n",
+      "Epoch 17/20\n",
+      "94/94 [==============================] - 13s 136ms/step - loss: 0.3803 - accuracy: 0.8666 - val_loss: 0.3155 - val_accuracy: 0.8917\n",
+      "Epoch 18/20\n",
+      "94/94 [==============================] - 13s 137ms/step - loss: 0.3721 - accuracy: 0.8658 - val_loss: 0.3336 - val_accuracy: 0.8873\n",
+      "Epoch 19/20\n",
+      "94/94 [==============================] - 13s 137ms/step - loss: 0.3620 - accuracy: 0.8727 - val_loss: 0.3130 - val_accuracy: 0.8940\n",
+      "Epoch 20/20\n",
+      "94/94 [==============================] - 13s 136ms/step - loss: 0.3473 - accuracy: 0.8768 - val_loss: 0.3036 - val_accuracy: 0.8973\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<tensorflow.python.keras.callbacks.History at 0x7fc493d07a58>"
+       "<tensorflow.python.keras.callbacks.History at 0x7f07b8210780>"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -284,13 +304,13 @@
     "model_test.fit(x=X_train, \n",
     "          y=y_train,\n",
     "          batch_size=128,\n",
-    "          epochs=10, \n",
+    "          epochs=20, \n",
     "          validation_data=(X_val, y_val))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -308,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -337,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
